
set(CUDD_SRCS cuddAddAbs.c cuddAddApply.c cuddAddFind.c
  cuddAddInv.c cuddAddIte.c cuddAddNeg.c
  cuddAddWalsh.c cuddAndAbs.c cuddAnneal.c
  cuddApa.c cuddAPI.c cuddApprox.c cuddBddAbs.c
  cuddBddCorr.c cuddBddIte.c cuddBridge.c
  cuddCache.c cuddCheck.c cuddClip.c cuddCof.c
  cuddCompose.c cuddDecomp.c cuddEssent.c
  cuddExact.c cuddExport.c cuddGenCof.c
  cuddGenetic.c cuddGroup.c cuddHarwell.c
  cuddInit.c cuddInteract.c cuddLCache.c
  cuddLevelQ.c cuddLinear.c cuddLiteral.c
  cuddMatMult.c cuddPriority.c cuddRead.c
  cuddRef.c cuddReorder.c cuddSat.c cuddSign.c
  cuddSolve.c cuddSplit.c cuddSubsetHB.c
  cuddSubsetSP.c cuddSymmetry.c cuddTable.c
  cuddUtil.c cuddWindow.c cuddZddCount.c
  cuddZddFuncs.c cuddZddGroup.c cuddZddIsop.c
  cuddZddLin.c cuddZddMisc.c cuddZddPort.c
  cuddZddReord.c cuddZddSetop.c cuddZddSymm.c
  cuddZddUtil.c
# Added to cudd 
  unique.c unique.h     
# Headers: 
  cudd.h cuddInt.h
 )

add_library(cudd ${CUDD_SRCS})